# figma-mcp

./: .gitignore  CHANGELOG.md  README.md  dune-project  dune-workspace  figma_mcp.opam  package-lock.json  package.json  start-figma-mcp-http.sh  start-figma-mcp-stdio.sh  start-figma-mcp.sh
.github/workflows/: release.yml
data/: telemetry.jsonl
docs/: DISCOVERIES.md  INSTALL-CHECKLIST.md  INSTALL-MANUAL.md  LARGE-RESPONSE-ARCHITECTURE.md  MCP-TEMPLATE.md  PROTOCOL-2025-11-25.md  RECIPES.md  SETUP.md
examples/: dune  figma_agent_example.ml
lib/: ciede2000.ml  dune  figma_api.ml  figma_api_eio.ml  figma_cache.ml  figma_codegen.ml  figma_compare.ml  figma_config.ml  figma_crawl.ml  figma_early_stop.ml  figma_effects.ml  figma_grpc_server.ml  figma_image_similarity.ml  figma_mcp.ml  figma_parser.ml  figma_plugin_bridge.ml  figma_plugin_features.ml  figma_query.ml  figma_similarity.ml  figma_stats.ml  figma_tokens.ml  figma_tree.ml  figma_types.ml  grpc_proto.ml  large_response.ml  llm_mcp_client.ml  llm_mcp_client_eio.ml  llm_provider.ml  llm_provider_eio.ml  mcp_progress.ml  mcp_protocol.ml  mcp_protocol_eio.ml  mcp_tools.ml  mcp_tools_defs.ml  mcp_tools_handlers.ml  neo4j_client.ml  semantic_mapper.ml  task_planner.ml  telemetry_jsonl.ml  text_verifier.ml  (+2 more)
plugin/: code.js  manifest.json  manifest.loopback.json  ui.html
plugin/sleepers/: manifest.json  package.json
proto/: figma.proto
scripts/: bump-version.sh  calc_similarity.ml  com.yousleepwhen.figma-agent.plist  dune  figma-accuracy-eval.py  figma-agent.py  figma-mcp-keepalive.sh  package-lock.json  package.json  pixel-perfect-analyzer.js  render-html.js  ssim-compare.js  ssim_compare.py  ssim_compare.sh
test/: bench_memo.ml  bench_p0.ml  debug_css.ml  dune  integration_test.sh  test_cache_early_stop.ml  test_ciede2000.ml  test_codegen.ml  test_codegen_p0.ml  test_figma_api_coverage.ml  test_figma_codegen_coverage.ml  test_figma_mcp.ml  test_large_response.ml  test_mcp_protocol_coverage.ml  test_mcp_tools_coverage.ml  test_oklab.ml  test_plan_tasks_rpc.ml  test_plugin_features.ml  test_semantic_mapper.ml  test_similarity_effects_coverage.ml  test_task_planner.ml  test_utils_coverage.ml  test_visual_verifier.ml
test/fixtures/: gradient_effects.json  simple_frame.json
