; Figma Agent Example - requires llm_mcp.agent_core
; Install: opam pin add llm_mcp git+ssh://git@github.com/jeong-sik/llm-mcp.git#main

(executable
 (name figma_agent_example)
 (libraries figma_mcp llm_mcp.agent_core lwt lwt.unix yojson)
 (preprocess (pps lwt_ppx))
(enabled_if (= %{env:LLM_MCP_AGENT_CORE=0} "1")))  ; Opt-in build only
