(library
 (name figma_mcp)
 (public_name figma_mcp)
 (libraries
   yojson
   uri
   str
   ipaddr
   ;; Lwt (Legacy: stdio mode only - HTTP/gRPC modes are Lwt-free)
   ;; TODO: Remove when stdio mode is migrated to Eio
   lwt
   lwt.unix
   cohttp-lwt-unix
   conduit-lwt-unix
   lwt_eio  ; Bridge for legacy fallback paths
   ;; Eio (Primary: HTTP server + gRPC server + pure Figma API client)
   eio
   eio_main
   httpun-eio
   gluten-eio
   cohttp-eio
   tls-eio
   ca-certs
   bigstringaf
   ;; gRPC (streaming for large responses)
   grpc-direct
   grpc-direct-core)
 (wrapped false)
 (ocamlopt_flags (:standard -w -50)))
